--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "guzzlehttp/guzzle": "dev-master"
     },
     "autoload": {
         "psr-0": {
-            "HelloWorld": "src/"
+            "ApiClient": "src/"
         }
     }
 }
