--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "authors": [
         {
             "name": "Julian Bente",
-            "email": "jbente@checkdomain.de",
+            "email": "j.bente@checkdomain.de",
             "homepage": "https://www.checkdomain.de",
             "role": "developer"
         }
