--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,10 @@
             "docs": "https://developer.checkdomain.de"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0",
-        "phpunit/phpunit": "5.7.25",
-        "guzzlehttp/guzzle": "dev-master"
+        "php": "^5.3.0",
+        "phpunit/phpunit": "^5.7.25",
+        "guzzlehttp/guzzle": "^6.3.0"
     },
     "autoload": {
         "psr-0": {
