--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,10 @@
             "role": "developer"
         }
     ],
-    "support": [
-        {
-            "email" : "support@checkdomain.de",
-            "docs": "https://developer.checkdomain.de"
-        }
-    ],
+    "support": {
+        "email" : "support@checkdomain.de",
+        "docs": "https://developer.checkdomain.de"
+    },
     "require": {
         "php": "^5.3.0",
         "phpunit/phpunit": "^5.7.25",
